fixed markers but havent written tests

--- a/app/views/groups/_map.js.erb
+++ b/app/views/groups/_map.js.erb
@@ -55,6 +55,7 @@ function pickGroupIcons(letter){
   var colors = ["blue", "brown", "darkgreen", "green", "orange", "paleblue", "pink", "purple", "red", "yellow"]
   var randomColor = colors[Math.floor(Math.random()*colors.length)];
   var image = "/assets/"+randomColor+"_Marker"+firstLetter+".png"
+  console.log(image);
   return image;
 }
 
