--- a/app/views/groups/_edit.js.erb
+++ b/app/views/groups/_edit.js.erb
@@ -56,5 +56,6 @@ $("#add-user").on("submit", function(event) {
     $(".user-list ul").prepend("<div id='user-name'><li>"+response.name+"</li></div>")
   }).fail(function(response) {
     $("#error-box").show();
+    $("#error-box").text(response.responseText)
   })
 })
