Invitations page automatically adds user to invited. Throws errors when necessary. Display pic next to invited by. Took out some more back buttons. I swear that's the last of the back buttons :squirrel:

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -51,7 +51,7 @@
 
 <h1>Users invited</h1>
 
-<div class="row">
+<div class="row" id="user-list">
   <% @group.invitations.each do |invitation| %>
     <div id="col span_12">
       <img src="<%= invitation.user.facebook.get_picture(invitation.user.uid) %>">
