add group name to header for displaying on every page

--- a/app/views/groups/_header.html.erb
+++ b/app/views/groups/_header.html.erb
@@ -1,4 +1,8 @@
 <div class="row">
+  <h1><%= @group.name %></h1>
+</div>
+
+<div class="row">
   <div class="col span_3 button">
     <p><a href="/groups/<%= @group.id %>/chat">Chat</a></p>
   </div>
