--- a/app/views/groups/new.html.erb
+++ b/app/views/groups/new.html.erb
@@ -1,3 +1,9 @@
+<div class="row col span_12">
+  <h1>New Group</h1>
+</div>
+
+<%= render partial: "partials/navheader" %>
+
 <div class="new-group-form">
   <p>
     <% if flash[:group_creation_errors] %>
