--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -4,12 +4,15 @@
 
 <div id="photo-stream" data-group-id= "<%=@group.id%>", data-user-id= "<%=current_user.id%>">
 
-  <%@photos.each do |photo|%>
-    <div class="photo"><img src="<%= photo.url%>"></div>
+  <% @photos.each do |photo|%>
+    <div class="photo">
+      <img src="<%= photo.url%>">
 
-  <% if photo.user_id == current_user.id%>
-    <button> Delete </button>
-  <%end%>
+      <% if photo.user_id == current_user.id%>
+        <button> Delete </button>
+      <%end%>
+    </div>
+
   <%end%>
 </div>
 
