--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -9,7 +9,7 @@
       <img src="<%= photo.url%>">
 
       <% if photo.user_id == current_user.id%>
-        <button> Delete </button>
+        <button><%= link_to "Delete", group_photo_path(@group, photo), method: :delete %></button>
       <%end%>
     </div>
 
