change description submit button to update

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -18,7 +18,7 @@
       <%= form_for @group, url: group_path do |f| %>
         <%= f.label :description %>
         <%= f.text_field :description %>
-        <%= f.submit "Description" %>
+        <%= f.submit "Update" %>
       <% end %>
     </div>
 
