Remove spacing on top by conforming to the responsive grid

--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,4 +1,6 @@
-
+<div class="row col span_12">
+  <h1>Edit Group</h1>
+</div>
 
 <% if current_user.id == @group.admin.id %>
   <div id="add-user-form">
