--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -8,7 +8,7 @@
     <div class="photo">
       <img src="<%= photo.url%>">
 
-      <% if photo.user_id == current_user.id%>
+      <% if photo.user_id == current_user.id || @group.admin.id == current_user.id %>
         <button><%= link_to "Delete", group_photo_path(@group, photo), method: :delete %></button>
       <%end%>
     </div>
