--- a/app/views/groups/_map.js.erb
+++ b/app/views/groups/_map.js.erb
@@ -8,25 +8,25 @@ function initialize(location) {
   updateCurrentUser();
   updateGroupMarkers();
 
-// ajax call to update the current users location
-function updateCurrentUser(){
-  var latitude = location.coords.latitude
-  var longitude = location.coords.longitude
-  var group_id = $("#map-canvas").attr("data-group-id")
-  user_id = $("#map-canvas").attr("data-user-id")
-  var location_hash = {latitude: latitude, longitude: longitude}
-  console.log(location_hash);
-  console.log("/groups/"+group_id+"/users/"+user_id)
+  // ajax call to update the current users location
+  function updateCurrentUser(){
+    var latitude = location.coords.latitude
+    var longitude = location.coords.longitude
+    var group_id = $("#map-canvas").attr("data-group-id")
+    user_id = $("#map-canvas").attr("data-user-id")
+    var location_hash = {latitude: latitude, longitude: longitude}
+    console.log(location_hash);
+    console.log("/groups/"+group_id+"/users/"+user_id)
 
-  $.ajax({
-    url:"/groups/"+group_id+"/users/"+user_id,
-    type: "get",
-    dataType: "json",
-    data: location_hash
-  }).done(function(){
-    console.log("in the done");
-  })
-}
+    $.ajax({
+      url:"/groups/"+group_id+"/users/"+user_id,
+      type: "get",
+      dataType: "json",
+      data: location_hash
+    }).done(function(){
+      console.log("in the done");
+    })
+  }
 
   var mapOptions = {
     center: currentlocation, // or the average of the users locations
@@ -35,13 +35,13 @@ function updateCurrentUser(){
 
   var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
 
-function pickUserIcon(){
-  var firstLetter = "<%= current_user.name[0].upcase %>"
-  var colors = ["blue", "brown", "darkgreen", "green", "orange", "paleblue", "pink", "purple", "red", "yellow"]
-  var randomColor = colors[Math.floor(Math.random()*colors.length)];
-  var image = "/assets/"+randomColor+"_Marker"+firstLetter+".png"
-  return image;
-}
+  function pickUserIcon(){
+    var firstLetter = "<%= current_user.name[0].upcase %>"
+    var colors = ["blue", "brown", "darkgreen", "green", "orange", "paleblue", "pink", "purple", "red", "yellow"]
+    var randomColor = colors[Math.floor(Math.random()*colors.length)];
+    var image = "/assets/"+randomColor+"_Marker"+firstLetter+".png"
+    return image;
+  }
 
   var marker = new google.maps.Marker({
     position: currentlocation,
@@ -50,27 +50,27 @@ function pickUserIcon(){
   });
 
 
-// create markers for each user on the same map
-function updateGroupMarkers(){
-  var group_id = $("#map-canvas").attr("data-group-id")
-  $.ajax({
-    url: "/groups/"+group_id+"/users",
-    dataType: "json",
-    type: "get"
-  }).done(function(response){
-    // console.log("ajax complete");
-    for (var i = 0; i < response.length; i++){
-      var marker = new google.maps.Marker({
-        position: new google.maps.LatLng(response[i].latitude, response[i].longitude),
-        map: map,
-        icon: "/assets/"+response[i].color+"_Marker"+response[i].name[0]+".png",
-        title: response[i].name
-      });
-    }
-  })
-}
+  // create markers for each user on the same map
+  function updateGroupMarkers(){
+    var group_id = $("#map-canvas").attr("data-group-id")
+    $.ajax({
+      url: "/groups/"+group_id+"/users",
+      dataType: "json",
+      type: "get"
+    }).done(function(response){
+      // console.log("ajax complete");
+      for (var i = 0; i < response.length; i++){
+        var marker = new google.maps.Marker({
+          position: new google.maps.LatLng(response[i].latitude, response[i].longitude),
+          map: map,
+          icon: "/assets/"+response[i].color+"_Marker"+response[i].name[0]+".png",
+          title: response[i].name
+        });
+      }
+    })
+  }
 
-function getupdatedlocation(){
+  function getupdatedlocation(){
     // console.log("updating location")
     navigator.geolocation.getCurrentPosition(function(location){
       var newlocation = new google.maps.LatLng(location.coords.latitude, location.coords.longitude)
@@ -86,7 +86,36 @@ function getupdatedlocation(){
 
   setInterval(getupdatedlocation, 3000)
   setInterval(updateGroupMarkers, 3000)
+
+  landmarker = null;
+
+  <% if @group.admin.id == current_user.id %>
+    google.maps.event.addListener(map, 'click', function(e) {
+      console.log(e.latLng);
+      var infowindow = new google.maps.InfoWindow({
+        content: "yoyoyo"
+      });
+      if(!landmarker) {
+        landmarker = new google.maps.Marker({
+          position: e.latLng,
+          map: map,
+          title: 'Hello World!',
+          draggable: true
+        })
+
+        google.maps.event.addListener(landmarker, 'dragend', function() {
+          console.log(landmarker.position)
+        })
+      }
+
+    })
+  <% end %>
 }
 
 
 google.maps.event.addDomListener(window, 'load', findme);
+
+
+
+
+
