--- a/app/views/groups/chat.html.erb
+++ b/app/views/groups/chat.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: "header" %>
 
 <div class="help-button">
-  <button id="help-button"> Send For Help </button>
+  <button id="help-button"> Find me! </button>
 </div>
 
 <script>
