--- a/app/views/partials/_navheader.html.erb
+++ b/app/views/partials/_navheader.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
-  <div class="col span_4 button"><p><%= link_to "My Groups", groups_path %></p></div>
-  <div class="col span_4 button"><p><%= link_to "Invites", invitations_path %></p></div>
-  <div class="col span_4 button"><p><%= link_to "New Group", new_group_path %></p></div>
+  <div class="col span_3 button"><p><%= link_to "My Groups", groups_path %></p></div>
+  <div class="col span_3 button"><p><%= link_to "Invites", invitations_path %></p></div>
+  <div class="col span_3 button"><p><%= link_to "New Group", new_group_path %></p></div>
+  <div class="col span_3 button"><p><%= link_to "Settings", "/users/#{current_user.id}/settings" %></p></div>
+
 </div>
