--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,35 +10,87 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require ../../../vendor/assets/stylesheets/responsive.gs.12col.css
+ *= require ../../../vendor/assets/stylesheets/skeleton.css
  *= require ../../../vendor/assets/stylesheets/normalize.css
- * require_tree .
- * require_self
+ *= require_tree .
+ *= require_self
  */
 
-/*body {
-  color: white;
-  text-decoration: none;
+@font-face {
+  font-family: CordeliaFont;
+  src: url('HunDIN1451.ttf');
 }
 
-a {
-  color: #FF9E00;
-  text-decoration: none;
+html {
+  font-family: helvetica; /* 1 */
+  -ms-text-size-adjust: 100%; /* 2 */
+  -webkit-text-size-adjust: 100%; /* 2 */
 }
 
-.header {
-  padding: 10px;
-  background-color: #90A437;
-  border-bottom: 4px solid #4E5D0C;
+/**
+ * Remove default margin.
+ */
+* {
+  outline: 1px solid black;
 }
 
-.footer {
-  padding: 10px;
-  background-color: #90A437;
-  border-bottom: 4px solid #4E5D0C;
+
+body {
+  margin: 0;
+  background-color: #56A0D3;
 }
 
-.button {
-  background-color: #637996;
+/*HEADER*/
+.band.header{
   text-align: center;
-}*/
+  top: 0;
+  width: 100%;
+  padding-top: 1px;
+  /*border-bottom: 10px solid #ffc63e;*/
+
+}
+/*NAVIGATION*/
+.band.navigation{
+  width: 100%;
+  height: 10em;
+}
+/*CONTENT*/
+.band.groups{
+  /*background-color: white;*/
+}
+/*FOOTER*/
+.band.footer{
+  background-color: yellow;
+  position:fixed;
+  width: 100%;
+  height: 10em;
+  bottom:0;
+  width: 100%;
+  padding-bottom: 5px;
+}
+
+.logo {
+  font: 50em;
+  font-family: CordeliaFont;
+  font-size: 6.2em;
+  margin: 0.67em 0;
+  /*font-style: */
+  font-weight: bold;
+}
+.four.columns{
+  text-align: center
+}
+
+.button.button-primary {
+  font-size: 2em;
+}
+
+.button.button-primary.login-button {
+  background-color: #c0c0c0;
+}
+
+.button.button-primary.login-button a {
+  color: black;
+  text-decoration: none;
+}
+
