--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,28 +18,32 @@
 </head>
 <body>
 
-<div class="container">
   <% if current_user %>
-    <div class="row col span_12 header">
-      <p>Keep Your Friends Close</p>
+    <div class="band header">
+      <div class="row">
+        <div class="twelve columns">
+          <h1>keep your friends close</h1>
+        </div>
+      </div>
     </div>
   <% end %>
 
   <%= yield %>
 
   <% if current_user %>
-    <div class="row footer">
-      <div class="col span_2">
-        <button><%= link_to "<-" , groups_path %></button>
-      </div>
+    <div class="band footer">
+      <div class="row">
+        <div class="two columns">
+          <button><%= link_to "<-" , groups_path %></button>
+        </div>
 
-      <div class="nav col span_10">
-        Signed in as <strong><%= current_user.name %></strong>!
-        <%= link_to "Sign out", signout_path, id: "sign_out" %>
+        <div class="ten columns">
+          Signed in as <strong><%= current_user.name %></strong>!
+          <%= link_to "Sign out", signout_path, id: "sign_out" %>
+        </div>
       </div>
     </div>
   <% end %>
-</div>
 
 </body>
 </html>
