--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
     <div class="band header">
       <div class="row">
         <div class="twelve columns">
-          <h1>keep your friends close</h1>
+          <h1 class="logo">keep &nbsp your &nbsp friends &nbsp close</h1>
         </div>
       </div>
     </div>
