--- a/app/views/partials/_navheader.html.erb
+++ b/app/views/partials/_navheader.html.erb
@@ -1,5 +1,19 @@
-<div class="row">
-  <div class="col span_4 button"><p><%= link_to "My Groups", groups_path %></p></div>
-  <div class="col span_4 button"><p><%= link_to "Invites", invitations_path %></p></div>
-  <div class="col span_4 button"><p><%= link_to "New Group", new_group_path %></p></div>
+<div class="band header">
+  <div class="row">
+    <div class="four columns">
+      <div class="button button-primary">
+        <%= link_to "My Groups", groups_path %>
+      </div>
+    </div>
+    <div class="four columns">
+      <div class="button button-primary">
+        <%= link_to "Invites", invitations_path %>
+      </div>
+    </div>
+    <div class="four columns">
+      <div class="button button-primary">
+        <%= link_to "New Group", new_group_path %>
+      </div>
+    </div>
+  </div>
 </div>
