found distance between marker and landmark

--- a/app/views/groups/map.html.erb
+++ b/app/views/groups/map.html.erb
@@ -7,6 +7,9 @@
   </div>
 </div>
 
+<button id="landmark"> How far am I from the landmark? </button>
+
 <script>
   <%= render "map.js" %>
+  <%= render "calculate_distance.js" %>
 </script>
