set an interval to run calculate distance

--- a/app/views/groups/map.html.erb
+++ b/app/views/groups/map.html.erb
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<button id="landmark"> How far am I from the landmark? </button>
+<div id="landmark">calculating distance from landmark...</div>
 
 <script>
   <%= render "map.js" %>
