--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,4 +1,4 @@
-<div class="band header">
+<div class="band navigation">
   <div class="row">
     <div class="four columns">
       <div class="button button-primary">
