--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,9 +3,9 @@
       <div class="row">
         <div class="twelve columns">
           <h1 class="logo">keep &nbsp your &nbsp friends &nbsp close</h1>
-          <div class="button button-primary login-button">
-            <%= link_to "sign in with facebook", "/auth/facebook", id: "sign_in" %>
-          </div>
+          <a href="/auth/facebook">
+            <img src="/login_with_facebook.png">
+          </a>
         </div>
       </div>
   </div>
