Center login logo and button

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,7 +47,7 @@ body {
   width: 100%;
   padding-top: 1px;
   /*border-bottom: 10px solid #ffc63e;*/
-
+  margin-top: 40vh;
 }
 /*NAVIGATION*/
 .band.navigation{
