--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,5 @@
 <% unless current_user %>
-  <div class="band header">
+  <div class="band header front-page">
       <div class="row">
         <div class="twelve columns">
           <h1 class="logo">keep &nbsp your &nbsp friends &nbsp close</h1>
