--- a/app/views/users/setupphone.html.erb
+++ b/app/views/users/setupphone.html.erb
@@ -1,4 +1,4 @@
-<div class="row col span_12">
+<div class="ryan-soren-form">
   <form action="/users/<%= @user.id %>/savephone" method="get">
     <label>Enter your phone:</label>
     <input type="text" name="phone">
