--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -18,15 +18,22 @@
   </div>
 </div>
 
-<div class="row">
+<div class="band groups">
   <% @invitations.each do |invitation| %>
-    <div class="col span_12">
-        <span id="invite-to"><%= link_to invitation.group.name, url_for(invitation.group) %></span></br>
-        <span id="invited-by"> Invited by: <img src="<%= invitation.group.admin.facebook.get_picture(invitation.group.admin.uid) %>"> <%= invitation.group.admin.name %></span></br>
-        <div class="accept-decline-buttons">
-          <%= button_to "Accept", group_invitation_path(invitation.group, invitation) + '/accept', method: :delete %>
-          <%= button_to "Decline", group_invitation_path(invitation.group, invitation) + '/decline', method: :delete %>
+    <div class="row invitation">
+      <div class="four columns">
+        <h1 class="group-name"><%= invitation.group.name %></h1>
+      </div>
+      <div class="four columns">
+        <div class="invited-by">Invited by: <img src="<%= invitation.group.admin.facebook.get_picture(invitation.group.admin.uid) %>"> <%= invitation.group.admin.name %>
         </div>
+      </div>
+      <div class="two columns">
+        <%= button_to "Accept", group_invitation_path(invitation.group, invitation) + '/accept', method: :delete, class: 'doge inline' %>
+      </div>
+      <div class="two columns">
+        <%= button_to "Decline", group_invitation_path(invitation.group, invitation) + '/decline', method: :delete, class: 'doge inline' %>
+      </div>
     </div>
   <% end %>
 </div>
