--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,29 +21,23 @@
   <% if current_user %>
     <div class="band header">
       <div class="row">
-        <div class="twelve columns">
-          <h1 class="logo">keep &nbsp your &nbsp friends &nbsp close</h1>
-        </div>
-      </div>
-    </div>
-  <% end %>
-
-  <%= yield %>
-
-  <% if current_user %>
-    <div class="band footer">
-      <div class="row">
         <div class="two columns">
           <button><%= link_to "<-" , groups_path %></button>
         </div>
 
-        <div class="ten columns">
+        <div class="eight columns">
+          <h1 class="logo">keep &nbsp your &nbsp friends &nbsp close</h1>
+        </div>
+
+        <div class="two columns">
           Signed in as <strong><%= current_user.name %></strong>!
           <%= link_to "Sign out", signout_path, id: "sign_out" %>
         </div>
       </div>
     </div>
   <% end %>
+
+  <%= yield %>
 
 </body>
 </html>
