--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,15 +21,17 @@
   <% if current_user %>
     <div class="band header">
       <div class="row">
-        <div class="two columns">
+        <div class="one columns">
           <button><%= link_to "<-" , groups_path %></button>
         </div>
 
-        <div class="eight columns">
-          <h1 class="logo">keep &nbsp your &nbsp friends &nbsp close</h1>
+        <div class="ten columns">
+          <div class="logo">
+            keep &nbsp your &nbsp friends &nbsp close
+          </div>
         </div>
 
-        <div class="two columns">
+        <div class="one columns">
           Signed in as <strong><%= current_user.name %></strong>!
           <%= link_to "Sign out", signout_path, id: "sign_out" %>
         </div>
