Make nav buttons look a little better

--- a/app/views/invitations/index.html.erb
+++ b/app/views/invitations/index.html.erb
@@ -1,19 +1,13 @@
 <div class="band navigation">
   <div class="row">
-    <div class="four columns">
-      <div class="button button-primary">
-        <%= link_to "My Groups", groups_path %>
-      </div>
+    <div class="four columns button button-primary">
+      <%= link_to "My Groups", groups_path %>
     </div>
-    <div class="four columns">
-      <div class="button button-primary button-selected">
-        <%= link_to "Invites", invitations_path %>
-      </div>
+    <div class="four columns button button-primary button-selected">
+      <%= link_to "Invites", invitations_path %>
     </div>
-    <div class="four columns">
-      <div class="button button-primary">
-        <%= link_to "New Group", new_group_path %>
-      </div>
+    <div class="four columns button button-primary">
+      <%= link_to "New Group", new_group_path %>
     </div>
   </div>
 </div>
