navbar for groups shows selected page

--- a/app/views/groups/chat.html.erb
+++ b/app/views/groups/chat.html.erb
@@ -1,4 +1,19 @@
-<%= render partial: "header" %>
+<div class="band navigation">
+  <div class="row">
+    <div class="three columns button button-primary button-selected">
+      <p><a href="/groups/<%= @group.id %>/chat">Chat</a></p>
+    </div>
+    <div class="three columns button button-primary">
+      <p><a href="/groups/<%= @group.id %>/map">Map</a></p>
+    </div>
+    <div class="three columns button button-primary">
+      <p><a href="/groups/<%= @group.id %>/photos">Photos</a></p>
+    </div>
+    <div class="three columns button button-primary">
+      <p><a href="/groups/<%= @group.id %>">Info</a></p>
+    </div>
+  </div>
+</div>
 
 <div class="help-button">
   <button id="help-button"> Find me! </button>
