--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,4 +1,19 @@
-<%= render partial: "groups/header" %>
+<div class="band navigation">
+  <div class="row">
+    <div class="three columns button button-primary">
+      <p><a href="/groups/<%= @group.id %>/chat">Chat</a></p>
+    </div>
+    <div class="three columns button button-primary">
+      <p><a href="/groups/<%= @group.id %>/map">Map</a></p>
+    </div>
+    <div class="three columns button button-primary button-selected">
+      <p><a href="/groups/<%= @group.id %>/photos">Photos</a></p>
+    </div>
+    <div class="three columns button button-primary">
+      <p><a href="/groups/<%= @group.id %>">Info</a></p>
+    </div>
+  </div>
+</div>
 
 <div id="take-photo"><button> Take a photo </button></div>
 
