--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -242,3 +242,13 @@ body {
 .photo img {
   width: 100%;
 }
+
+.user-image {
+  display: inline-block;
+}
+
+.name-tag {
+  display: inline-block;
+  margin-top: -40pt;
+  font-size: 2em;
+}
