--- a/app/views/groups/map.html.erb
+++ b/app/views/groups/map.html.erb
@@ -17,7 +17,7 @@
 
 <div class="row">
   <div class="col span_12">
-    <div style="height: 500px" id="map-canvas" data-group-id="<%=@group.id%>", data-user-id="<%=current_user.id%>">
+    <div id="map-canvas" data-group-id="<%=@group.id%>", data-user-id="<%=current_user.id%>">
     </div>
   </div>
 </div>
