--- a/app/views/groups/chat.html.erb
+++ b/app/views/groups/chat.html.erb
@@ -20,7 +20,7 @@
     <div class="eight columns">
       <form class="ryan-soren-form" id="chat-input">
         <input type="text" name="message">
-        <input type="submit" name="send-message" value="Send">
+        <input class="doge" type="submit" name="send-message" value="Send">
       </form>
     </div>
     <div class="two columns">
