--- a/app/views/groups/edit.html.erb
+++ b/app/views/groups/edit.html.erb
@@ -1,13 +1,12 @@
-<div class="row col span_12">
-  <h1>Edit Group</h1>
-</div>
+<h1>Group Name: <%= @group.name %></h1>
 
 <% if current_user.id == @group.admin.id %>
-  <div id="add-user-form">
+  <div class="ryan-soren-form" id="add-user-form">
     <div id="error-box" style="display: none;">
       <p>Error Message</p>
     </div>
 
+    <h3>Add Users</h3>
     <form id="add-user">
       <input type="text" name="name" id="search">
       <input type="hidden" name="uid" value="">
@@ -24,10 +23,6 @@
       <% end %>
     </div>
 
-    <%= link_to 'Delete Group', group_path, method: :delete, data: { confirm: 'Are you sure?' } %></br>
-
-    Group Name: <%= @group.name %> </br>
-
     <% if @group.description != nil %>
       Group Description: <%= @group.description %>
     <% end %>
@@ -39,34 +34,48 @@
   </script>
 
 <% end %>
+
+<br>
+<%= link_to 'Delete Group', group_path, method: :delete, data: { confirm: 'Are you sure?' }, class: 'doge' %></br>
+
 <h1>Group Admin </h1>
 
-<div class="row">
-    <div id="col span_12">
-      <% admin = @group.admin%>
-      <img src="<%= admin.facebook.get_picture(admin.uid) %>">
-      <%= admin.name %>
-    </div>
+<div class="band">
+  <div class="row">
+      <div class="six columns content-item">
+        <% admin = @group.admin%>
+        <div class="user-image">
+          <img src="<%= admin.facebook.get_picture(admin.uid) %>">
+        </div>
+        <div class="name-tag"><%= admin.name %></div>
+      </div>
+  </div>
 </div>
 
 <h1>Members</h1>
 
-<div class="row">
-  <% @group.users.each do |user| %>
-    <div id="col span_12">
-      <img src="<%= user.facebook.get_picture(user.uid) %>">
-      <%= user.name %>
-    </div>
-  <% end %>
+<div class="band">
+  <div class="row">
+    <% @group.users.each do |user| %>
+      <div class="six columns content-item">
+        <div class="user-image">
+          <img src="<%= user.facebook.get_picture(user.uid) %>">
+        </div>
+        <div class="name-tag"><%= user.name %></div>
+      </div>
+    <% end %>
+  </div>
 </div>
 
 <h1>Users invited</h1>
 
-<div class="row" id="user-list">
-  <% @group.invitations.each do |invitation| %>
-    <div id="col span_12">
-      <img src="<%= invitation.user.facebook.get_picture(invitation.user.uid) %>">
-      <%= invitation.user.name %>
-    </div>
-  <% end %>
+<div class="band">
+  <div class="row" id="user-list">
+    <% @group.invitations.each do |invitation| %>
+      <div class="six columns content-item">
+        <img src="<%= invitation.user.facebook.get_picture(invitation.user.uid) %>">
+        <%= invitation.user.name %>
+      </div>
+    <% end %>
+  </div>
 </div>
